--- a/index.html
+++ b/index.html
@@ -43,11 +43,16 @@
                     <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
                     <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo expedita mollitia neque quasi accusamus ullam eum alias animi earum omnis, deleniti dolores nostrum non laborum nisi, dignissimos aperiam distinctio laboriosam!</p>
                     <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before!</h3>
-                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo expedita mollitia neque quasi accusamus ullam eum alias animi earum omnis, deleniti dolores nostrum non laborum nisi, dignissimos aperiam distinctio laboriosam!</p>
-                
-                </div>
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo expedita mollitia neque quasi accusamus ullam eum alias.</p>
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                    </div>
+
                 <div class="col-1-of-2">
-                   Image composition
+                   <div class="composition">
+                    <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                    <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                    <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                </div>
                 </div>
             </div>
 
