--- a/index.html
+++ b/index.html
@@ -125,10 +125,17 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             <div class="col-1-of-3">
                <div class="card">
                 <div class="card__side--front">
-                    FRONT
+                    <div class="card__picture card__picture--1">
+                        &nbsp;
+                    </div>
+                    <h4 class="card__heading">
+                        The Sea Explorer
+
+                    </h4>
+                    <div class="card__details">Details</div>
                 </div>
                 <div class="card__side--back">
-                    BACK
+                    BACK SIDE
                 </div>
                </div>
             </div>
